--- a/frontend/contact-address-app/src/assets/css/home.css
+++ b/frontend/contact-address-app/src/assets/css/home.css
@@ -3,10 +3,21 @@
 .home {
     display: flex;
     color: #ffffff;
-    flex-decoration: column;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 92vh;
+    height: 90vh;
     padding-inline: 30px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../white-triangle-369b8d2d.jpg");
+}
+
+.home-title {
+    font-size: 2rem;
+    margin-bottom: 10px;
+    word-spacing: 1%;
+}
+
+.home-description {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
 }
